tests/expected/task-2/invalid-number-of-args-1.uc.out
---
test: type suites/task-2/invalid-number-of-args-1.uc
---
suites/task-2/invalid-number-of-args-1.uc:6:12: type error: Cannot unify '⟦f(x[1:4],y[1:7]){...}:[1:2]⟧' and '(⟦1[6:13]⟧) -> ⟦f(1)[6:12]⟧' (with canonicals '(⟦x[1:4]⟧,⟦y[1:7]⟧) -> ⟦(x + y)[2:13]⟧' and '(⟦1[6:13]⟧) -> ⟦f(1)[6:12]⟧')
     return f(1);
             ^


exit: 1
